test/parsing/ferguson/reserved-real.good
reserved-real.chpl:1: error: attempt to redefine reserved type 'real'
reserved-real.chpl:3: error: attempt to redefine reserved type 'real'
reserved-real.chpl:6: error: attempt to redefine reserved type 'real'
reserved-real.chpl:7: error: attempt to redefine reserved type 'real'
reserved-real.chpl:10: error: attempt to redefine reserved type 'real'
reserved-real.chpl:12: error: attempt to redefine reserved type 'real'
reserved-real.chpl:17: error: attempt to redefine reserved type 'real'
